The lldb vector summary provider always shows zero capacity https://bugs.webkit.org/show_bug.cgi?id=187132

Reviewed by Daniel Bates.

WTFVectorProvider in lldb_webkit.py was calling GetChildMemberWithName('m_capacity')
on the buffer instead of the valobj.

* lldb/lldbWebKitTester/main.cpp:
(testSummaryProviders):
* lldb/lldb_webkit.py:
(WTFVectorProvider.update):
* lldb/lldb_webkit_unittest.py:
(TestSummaryProviders.serial_test_WTFString_SummaryProvider_16bit_string):
(TestSummaryProviders):
(TestSummaryProviders.serial_test_WTFVectorProvider_empty_vector):
(TestSummaryProviders.serial_test_WTFVectorProvider_vector_size_and_capacity):

Canonical link: https://commits.webkit.org/202393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233306 268f45cc-cd09-0410-ab3c-d52691b4dbfc